Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28521

CDB: BP source mapping wrong

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 9.0.1
    • Qt Creator 9.0.0
    • Debugger
    • None
    • Windows
    • 7373193584 (qt-creator/qt-creator/9.0)

    Description

      mapping seems correct, but breakpoints are listed with their "original" path and clicking on them tries to open locations that aren't present on the local system

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes