Debugger: map reported breakpoint file locations

Fixes: QTCREATORBUG-28521
Change-Id: I8229483df7fb0c51750e19d4558e81f5320e7f33
Reviewed-by: Christian Stenger <christian.stenger@qt.io>